--- a/Packages/com.awavr.controllercleaner/package.json
+++ b/Packages/com.awavr.controllercleaner/package.json
@@ -1,10 +1,12 @@
 {
   "name": "com.awavr.controllercleaner",
   "displayName": "AwA - ControllerCleaner",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Controller Editor's 'Cleanup unused sub-assets' in a standalone and faster script.",
   "gitDependencies": {},
-  "vpmDependencies": {},
+  "vpmDependencies": {
+    "com.awavr.core": ">=1.0.0"
+  },
   "author": {
     "name": "AwA",
     "email": "N/A",
